      to be able to identify individual characters if BaseEncoding
      isn't present, which it isn't for TrueType fonts).

      I've left the -unicodemap option in place, and it's still
      undocumented (except here), but it's now on by default.  Call
      $pdf->ttfont($fontfile, -unicodemap => 0) if you want to disable
      it for performance or file size reasons.

    - The various filter types have their own classes in the
      PDF::API2::Basic::PDF::Filter namespace now, rather than having
      all of the packages in Filter.pm.

    - To facilitate testing and ensure that identically-generated PDFs
      have identical output in Perl 5.17.5 or later, PDF dictionary
      keys are now sorted during output.


2.019     2011-03-10

    - [RT #66167] Fix a typo in the require statement for code128
      barcodes (TC Kuan).

    - Numerous modules are now only loaded when they're needed, which
      should help speed up the load time and reduce the memory
      footprint.

    - Test coverage is up to about 45% of the codebase.


2.018     2011-02-23

    - The tests in 2.017 exposed a floating point issue where some
      computers give more trailing zeros than others.  It doesn't
      affect the output, but it does break the tests on those
      computers, since the PDFs are slightly different.  This version
      modifies the float() method to remove trailing zeros, which
      should fix the test breakage and give consistent PDFs.


2.017     2011-02-22

    - The DejaVu fonts have been removed from the distribution, since
      they were only used by one example script.  If you need them for
      your project, you can download them from http://dejavu-fonts.org

    - Fix: Content->bogen() didn't behave as documented if $move was
      set (it started drawing from the center of the circle rather
      than [x1, y1]).

    - The undocumented nettfont method has been removed, along with
      the supporting PDF::API2::Resource::Font::neTrueType module.
